--- a/blobdetection/package.xml
+++ b/blobdetection/package.xml
@@ -21,6 +21,10 @@
   <run_depend>opencv2</run_depend>  
   <buildtool_depend>cv_bridge</buildtool_depend>
   <run_depend>cv_bridge</run_depend>  
+  <buildtool_depend>message_generation</buildtool_depend>
+  <run_depend>message_runtime</run_depend>  
+
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
