--- a/object_lib/package.xml
+++ b/object_lib/package.xml
@@ -15,6 +15,8 @@
   <run_depend>opencv2</run_depend>  
   <build_depend>sysutil</build_depend>
   <run_depend>sysutil</run_depend>  
+  <build_depend>mathutil</build_depend>
+  <run_depend>mathutil</run_depend>  
 
 
   <!-- The export tag contains other, unspecified, tags -->
