--- a/object_lib/package.xml
+++ b/object_lib/package.xml
@@ -15,6 +15,13 @@
   <run_depend>opencv2</run_depend>  
   <build_depend>sysutil</build_depend>
   <run_depend>sysutil</run_depend>  
+  <build_depend>image_transport</build_depend>
+  <run_depend>image_transport</run_depend>  
+  <build_depend>cv_bridge</build_depend>
+  <run_depend>cv_bridge</run_depend>  
+  <build_depend>sensor_msgs</build_depend>
+  <run_depend>sensor_msgs</run_depend>  
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
