--- a/purple_classifier/package.xml
+++ b/purple_classifier/package.xml
@@ -21,7 +21,10 @@
   <run_depend>opencv2</run_depend>  
   <buildtool_depend>cv_bridge</buildtool_depend>
   <run_depend>cv_bridge</run_depend>
-
+  <build_depend>sysutil</build_depend>
+  <run_depend>sysutil</run_depend>  
+  <build_depend>visionutil</build_depend>
+  <run_depend>visionutil</run_depend>  
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
