--- a/purple_classifier/CMakeLists.txt
+++ b/purple_classifier/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(purple_classifier)
 
-find_package(catkin REQUIRED COMPONENTS roscpp sensor_msgs image_transport cv_bridge sysutil rosutil visionutil)
+find_package(catkin REQUIRED COMPONENTS roscpp sensor_msgs image_transport cv_bridge rosutil visionutil)
 find_package(OpenCV REQUIRED)
 
 catkin_package(
