--- a/purple_classifier/package.xml
+++ b/purple_classifier/package.xml
@@ -21,8 +21,8 @@
   <run_depend>opencv2</run_depend>  
   <buildtool_depend>cv_bridge</buildtool_depend>
   <run_depend>cv_bridge</run_depend>
-  <build_depend>sysutil</build_depend>
-  <run_depend>sysutil</run_depend>  
+  <build_depend>rosutil</build_depend>
+  <run_depend>rosutil</run_depend>  
   <build_depend>visionutil</build_depend>
   <run_depend>visionutil</run_depend>  
 
