--- a/color_detection/CMakeLists.txt
+++ b/color_detection/CMakeLists.txt
@@ -1,13 +1,20 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(color_detection)
 
-find_package(catkin REQUIRED COMPONENTS roscpp sensor_msgs image_transport cv_bridge rosutil visionutil)
+find_package(catkin REQUIRED COMPONENTS roscpp std_msgs sensor_msgs message_generation image_transport cv_bridge 
+                                        rosutil visionutil)
 find_package(OpenCV REQUIRED)
+
+add_message_files( FILES
+  colors_detected.msg
+)
+
+generate_messages(DEPENDENCIES std_msgs)
 
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES color_detection
-#  CATKIN_DEPENDS roscpp
+  CATKIN_DEPENDS message_runtime
 #  DEPENDS system_lib
 )
 
