--- a/color_detection/package.xml
+++ b/color_detection/package.xml
@@ -25,6 +25,8 @@
   <run_depend>rosutil</run_depend>  
   <build_depend>visionutil</build_depend>
   <run_depend>visionutil</run_depend>  
+  <build_depend>message_generation</build_depend>
+  <run_depend>message_runtime</run_depend>  
 
 
   <!-- The export tag contains other, unspecified, tags -->
