--- a/color_detection/config/redParams.yaml
+++ b/color_detection/config/redParams.yaml
@@ -1,12 +1,12 @@
 models: {
-  purple: {
+  red: {
     gauss_thresh: 100,
     min_contour_size: 50
   }
 }
 
 models:
-  purple:
+  red:
     mu:
       - 0.378115815243766
       - 0.24700312807057
