--- a/pcl_methods/CMakeLists.txt
+++ b/pcl_methods/CMakeLists.txt
@@ -16,3 +16,7 @@ include_directories(include ${catkin_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS})
 add_executable(plane_extraction src/plane_extraction.cpp)
 target_link_libraries(plane_extraction ${catkin_LIBRARIES} ${PCL_LIBRARIES} pclutil)
 add_dependencies(plane_extraction ${catkin_EXPORTED_TARGETS})
+
+add_executable(object_clustering src/object_clustering.cpp)
+target_link_libraries(object_clustering ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+add_dependencies(object_clustering ${catkin_EXPORTED_TARGETS})
