--- a/image_conversion/package.xml
+++ b/image_conversion/package.xml
@@ -12,15 +12,15 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <buildtool_depend>roscpp</buildtool_depend>
+  <build_depend>roscpp</build_depend>
   <run_depend>roscpp</run_depend>
-  <buildtool_depend>sensor_msgs</buildtool_depend>
+  <build_depend>sensor_msgs</build_depend>
   <run_depend>sensor_msgs</run_depend>
-  <buildtool_depend>image_transport</buildtool_depend>
+  <build_depend>image_transport</build_depend>
   <run_depend>image_transport</run_depend>
-  <buildtool_depend>opencv2</buildtool_depend>
+  <build_depend>opencv2</build_depend>
   <run_depend>opencv2</run_depend>  
-  <buildtool_depend>cv_bridge</buildtool_depend>
+  <build_depend>cv_bridge</build_depend>
   <run_depend>cv_bridge</run_depend>    
 
   <!-- The export tag contains other, unspecified, tags -->
