--- a/pcl_methods/CMakeLists.txt
+++ b/pcl_methods/CMakeLists.txt
@@ -20,3 +20,7 @@ add_dependencies(plane_extraction ${catkin_EXPORTED_TARGETS})
 add_executable(object_clustering src/object_clustering.cpp)
 target_link_libraries(object_clustering ${catkin_LIBRARIES} ${PCL_LIBRARIES})
 add_dependencies(object_clustering ${catkin_EXPORTED_TARGETS})
+
+add_executable(cubeIdentifier src/cubeidentifiernode.cpp)
+target_link_libraries(cubeIdentifier ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+add_dependencies(cubeIdentifier ${catkin_EXPORTED_TARGETS})
