--- a/pcl_methods/package.xml
+++ b/pcl_methods/package.xml
@@ -26,7 +26,10 @@
   <build_depend>rosutil</build_depend>
   <run_depend>rosutil</run_depend>  
   <build_depend>visionutil</build_depend>
-  <run_depend>visionutil</run_depend>  
+  <run_depend>visionutil</run_depend>
+  <build_depend>pclutil</build_depend>
+  <run_depend>pclutil</run_depend>  
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
