added parameters and launch file. Now publishes a boolean

--- a/pcl_methods/CMakeLists.txt
+++ b/pcl_methods/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(pcl_methods)
 
-find_package(catkin REQUIRED COMPONENTS roscpp sensor_msgs image_transport pcl_ros pcl_conversions pclutil rosutil)
+find_package(catkin REQUIRED COMPONENTS roscpp std_msgs sensor_msgs image_transport pcl_ros pcl_conversions pclutil rosutil)
 find_package(PCL REQUIRED)
 
 catkin_package(
@@ -11,7 +11,11 @@ catkin_package(
 #  DEPENDS system_lib
 )
 
+
+
 include_directories(include ${catkin_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS})
+link_directories(${PCL_LIBRARY_DIRS})
+add_definitions(${PCL_DEFINITIONS})
 
 add_executable(plane_extraction src/plane_extraction.cpp)
 target_link_libraries(plane_extraction ${catkin_LIBRARIES} ${PCL_LIBRARIES} pclutil)
