--- a/pcl_methods/package.xml
+++ b/pcl_methods/package.xml
@@ -15,6 +15,8 @@
   <run_depend>roscpp</run_depend>
   <build_depend>sensor_msgs</build_depend>
   <run_depend>sensor_msgs</run_depend>
+  <build_depend>std_msgs</build_depend>
+  <run_depend>std_msgs</run_depend>
   <build_depend>image_transport</build_depend>
   <run_depend>image_transport</run_depend>
   <build_depend>pcl_conversions</build_depend>
