--- a/vision_master/package.xml
+++ b/vision_master/package.xml
@@ -15,6 +15,10 @@
   <run_depend>roscpp</run_depend>
   <build_depend>std_msgs</build_depend>
   <run_depend>std_msgs</run_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <build_depend>ras_msgs</build_depend>
+  <run_depend>ras_msgs</run_depend>
   <build_depend>color_detection</build_depend>
   <run_depend>color_detection</run_depend>  
 
