color detection node now publishes pixel coordinates of where the pixel was found

--- a/color_detection/CMakeLists.txt
+++ b/color_detection/CMakeLists.txt
@@ -7,9 +7,10 @@ find_package(OpenCV REQUIRED)
 
 add_message_files( FILES
   colors_detected.msg
+  color_status.msg
 )
 
-generate_messages(DEPENDENCIES std_msgs)
+generate_messages(DEPENDENCIES std_msgs) # color_detection)
 
 catkin_package(
 #  INCLUDE_DIRS include
