--- a/vision_master/CMakeLists.txt
+++ b/vision_master/CMakeLists.txt
@@ -2,21 +2,11 @@ cmake_minimum_required(VERSION 2.8.3)
 project(vision_master)
 
 
-find_package(catkin REQUIRED COMPONENTS roscpp std_msgs sensor_msgs message_generation color_detection
+find_package(catkin REQUIRED COMPONENTS roscpp std_msgs sensor_msgs vision_msgs
     visionutil rosutil)# ras_msgs)
 #find_package( REQUIRED COMPONENTS)
 
-add_message_files(
-  DIRECTORY msg
-  FILES
-    object_found.msg
-)
 
-generate_messages(DEPENDENCIES std_msgs)
-
-catkin_package(
-  CATKIN_DEPENDS message_runtime
-)
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
