--- a/color_detection/package.xml
+++ b/color_detection/package.xml
@@ -15,6 +15,8 @@
   <run_depend>roscpp</run_depend>
   <build_depend>sensor_msgs</build_depend>
   <run_depend>sensor_msgs</run_depend>
+  <build_depend>vision_msgs</build_depend>
+  <run_depend>vision_msgs</run_depend>
   <build_depend>image_transport</build_depend>
   <run_depend>image_transport</run_depend>
   <build_depend>opencv2</build_depend>
