--- a/pcl_methods/package.xml
+++ b/pcl_methods/package.xml
@@ -5,10 +5,12 @@
   <description>Methods using PCL</description>
 
   <maintainer email="michalst@kth.se">michal</maintainer>
+  <maintainer email="dmitrijl@kth.se">dmitrij</maintainer>
 
   <license>BSD</license>
 
   <author email="michalst@kth.se">Michal Staniaszek</author>
+  <author email="dmitrijl@kth.se">Dmitrij Lioubartsev</author>
   
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
@@ -17,6 +19,8 @@
   <run_depend>sensor_msgs</run_depend>
   <build_depend>std_msgs</build_depend>
   <run_depend>std_msgs</run_depend>
+  <build_depend>vision_msgs</build_depend>
+  <run_depend>vision_msgs</run_depend>
   <build_depend>image_transport</build_depend>
   <run_depend>image_transport</run_depend>
   <build_depend>pcl_conversions</build_depend>
