--- a/vision_master/package.xml
+++ b/vision_master/package.xml
@@ -19,10 +19,8 @@
   <run_depend>sensor_msgs</run_depend>
   <build_depend>ras_msgs</build_depend>
   <run_depend>ras_msgs</run_depend>
-  <build_depend>color_detection</build_depend>
-  <run_depend>color_detection</run_depend>
-  <build_depend>message_generation</build_depend>
-  <run_depend>message_runtime</run_depend> 
+  <build_depend>vision_msgs</build_depend>
+  <run_depend>vision_msgs</run_depend>
   <build_depend>rosutil</build_depend>
   <run_depend>rosutil</run_depend>	
   <build_depend>visionutil</build_depend>
