--- a/pcl_methods/config/cube_identifier_params.yaml
+++ b/pcl_methods/config/cube_identifier_params.yaml
@@ -1,8 +1,11 @@
 cube_identifier_params : { 
 theta: 5, 
 search_radius: 0.015, 
-num_vectors: 13,
+num_vectors: 100,
 voxel_grid_x: 0.005,
 voxel_grid_y: 0.005,
-voxel_grid_z: 0.005
+voxel_grid_z: 0.005,
+check_patric_cube: true,
+check_purple_cube: false,
+size_around_color: 70
 }
